fixed weird coloring of text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     -ms-user-select: none;
     -webkit-user-select: none;
     user-select: text;
+    color: white;
 }
 .colorSelector {
     background: none;
@@ -17,7 +18,7 @@
 
 .party {
     border-radius: 5px;
-    border: none;;
+    border: none;
     cursor: pointer;
     background: rgba(255, 255, 255, 0.2)
 }
